--- a/config/locales/custom/de-DE/general.yml
+++ b/config/locales/custom/de-DE/general.yml
@@ -7,7 +7,7 @@ de:
       most_active:
         debates: "Aktivste Diskussionen"
       see_all_debates: Alle Diskussionen anzeigen
-  proposals:
+  proposalsbranchbran:
     new:
       more_info: Wie funktionieren die Vorschläge?
   poster:
@@ -24,3 +24,43 @@ de:
           notice: "Jetzt folgen Sie diesem Vorschlag! <br> Wir werden Sie über Änderungen benachrichtigen sobald diese erscheinen, sodass Sie auf dem neusten Stand sind."
         destroy:
           notice: "Sie haben aufgehört diesem Vorschlag zu folgen! <br> Sie werden nicht länger Benachrichtigungen zu diesem Vorschlag erhalten."
+    tags_cloud:
+      tags: Beliebte Tags
+      districts: "Bezirke"
+      districts_list: "Liste der Bezirke"
+      categories: "Alle Tags"
+    advanced_search:
+      author_type: "Nach Autorenkategorie"
+  debates:
+    index:
+      orders:
+        confidence_score: Am besten bewertet
+        created_at: Neueste
+        hot_score: Aktivste
+  proposals:
+    index:
+      top_link_proposals: Meist unterstützte Vorschläge nach Tags
+      retired_proposals_link: "Vom Autor zurückgezogene Vorschläge"
+      proposals_lists: Weitere Vorschlagslisten
+      orders:
+        confidence_score: Am besten bewertet
+        created_at: Neueste
+        hot_score: Aktivste
+        most_commented: Am meisten kommentiert
+        relevance: Relevanz
+        archival_date: Archiviert
+        recommendations: Empfehlungen
+    form:
+      proposal_responsible_name_note: "(Einzelperson oder Vertreter/in eines Kollektivs; wird nicht öffentlich angezeigt)"
+      proposal_summary_note: "(maximal 200 Zeichen)"
+      tag_category_label: "Vorgeschlagene Tags"
+      tags_instructions: "Diesen Vorschlag markieren. Sie können aus vorgeschlagenen Tags wählen, oder Ihre eigenen hinzufügen"
+      tags_label: Verschlagwortung
+      tags_placeholder: "Klicken Sie auf einen oder mehrere vorgeschlagene(n) Tag(s) oder geben Sie eigene Tags komma-getrennt ein."
+    new:
+      more_info: Wie funktionieren die Vorschläge?
+  polls:
+    index:
+      participate_button: "An Abstimmung teilnehmen"
+      section_footer:
+        description: Abstimmungen sind ein partizipatorischer Mechanismus, bei dem die Teilnehmer themenbezogene Entscheidungen treffen können. Die Teilnahmebedingingen, wie zum Beispiel die Beschränkung auf einzelne Gebiete, werden bei der Erstellung einer Abstimmung festgelegt.
