--- a/config/locales/custom/de-DE/general.yml
+++ b/config/locales/custom/de-DE/general.yml
@@ -7,6 +7,8 @@ de:
       most_active:
         debates: "Aktivste Diskussionen"
       see_all_debates: Alle Diskussionen anzeigen
+    recommended:
+      help: "Diese Empfehlungen werden durch die Schlagwörter der Diskussionen und Vorschläge, denen Sie folgen, generiert."
   poster:
     index:
       intro_text: "<strong> Ich beteilige mich mit meinem eigenen Vorschlag an %{org}</strong>, und nur wenn Sie dem beitreten, kann ich die notwendige Unterstützung erreichen, damit wir die Stadt so gestalten, wie wir sie alle wollen."
@@ -23,12 +25,18 @@ de:
           notice: "Sie haben aufgehört diesem Vorschlag zu folgen! <br> Sie werden nicht länger Benachrichtigungen zu diesem Vorschlag erhalten."
     tags_cloud:
       tags: Beliebte Tags
-      districts: "Bezirke"
-      districts_list: "Liste der Bezirke"
+      districts: "Bereiche"
+      districts_list: "Liste der Bereiche"
       categories: "Alle Tags"
     advanced_search:
       author_type: "Nach Autorenkategorie"
     follow_entity: "Diesem Vorschlag folgen"
+    suggest:
+      proposal:
+        found:
+          one: "Es gibt bereits einen Vorschlag mit dem Begriff '%{query}', Sie können an diesem mitwirken, anstatt einen neuen zu erstellen"
+          other: "Es gibt Vorschläge mit dem Begriff '%{query}', Sie können an diesen mitwirken, anstatt einen neuen zu erstellen"
+        message: "Sie sehen %{limit} %{count} Vorschläge mit dem Begriff \"%{query}\""
   debates:
     index:
       orders:
@@ -80,4 +88,32 @@ de:
       poll_questions: Abstimmungen
       collaborative_legislation: Beteiligungsverfahren
       budgets: Budgets
+      valuation: Gutachten
+  users:
+    show:
+      filters:
+        comments:
+          one: 1 Kommentar
+          other: "%{count} Kommentare"
+        debates:
+          one: 1 Diskussion
+          other: "%{count} Diskussionen"
+        proposals:
+          one: 1 Vorschlag
+          other: "%{count} Vorschläge"
+        budget_investments:
+          one: 1 Investitionsvorschlag
+          other: "%{count} Investitionsvorschläge"
+        follows:
+          one: 1 folge ich 
+          other: "%{count} folge ich"
+  form:
+    proposal_notification: "Benachrichtigung"
+    budget/investment: Investitionsvorschlag
+    budget/group: Budget Gruppe
+    budget/heading: Budget Untergruppe
+    geozone: Bereiche
+  geozones:
+    none: Alle Bereiche
+
 
