--- a/config/locales/custom/en/general.yml
+++ b/config/locales/custom/en/general.yml
@@ -1,3 +1,4 @@
+en:
   search:
     go_to_discusstion: "open discussion..."
     search_form:
@@ -20,3 +21,14 @@
       le: "L"
       co: "c"
       si: "s"
+  debates:
+    new:
+      start_new_in: Start a debate in %{category}
+  proposals:
+    new:
+      start_new_in: Create new proposal in %{category}
+  shared:
+    tags_cloud:
+      subcategories: "Subcategories"
+  alerts:
+    select_one_category: "Please select one category to create a %{model}"
